--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -237,5 +237,9 @@
     "Sluit jouw vereniging aan bij Stamhoofd": "Sluit jouw vereniging aan bij Stamhoofd",
     "Terug naar Stamhoofd": "Terug naar Stamhoofd",
     "Maak eerst een categorie om deze groep naar terug te zetten.": "Maak eerst een categorie om deze groep naar terug te zetten.",
-    "Leden kunnen enkel zelf inschrijven via Stamhoofd": "Leden kunnen enkel zelf inschrijven via Stamhoofd"
+    "Leden kunnen enkel zelf inschrijven via Stamhoofd": "Leden kunnen enkel zelf inschrijven via Stamhoofd",
+    "De betaling loopt niet via Stamhoofd": "De betaling loopt niet via Stamhoofd",
+    "Je kan geen documenten aanmaken in de gratis versie van Stamhoofd": "Je kan geen documenten aanmaken in de gratis versie van Stamhoofd",
+    "Dit is geen geldig zaalplan uit Stamhoofd": "Dit is geen geldig zaalplan uit Stamhoofd",
+    "Ticketverkoop via Stamhoofd": "Ticketverkoop via Stamhoofd"
 }
