Added member security codes
fixes STA-169

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -237,9 +237,10 @@
     "Sluit jouw vereniging aan bij Stamhoofd": "Sluit jouw vereniging aan bij Stamhoofd",
     "Terug naar Stamhoofd": "Terug naar Stamhoofd",
     "Maak eerst een categorie om deze groep naar terug te zetten.": "Maak eerst een categorie om deze groep naar terug te zetten.",
-    "Leden kunnen enkel zelf inschrijven via Stamhoofd": "Leden kunnen enkel zelf inschrijven via Stamhoofd",
     "De betaling loopt niet via Stamhoofd": "De betaling loopt niet via Stamhoofd",
     "Je kan geen documenten aanmaken in de gratis versie van Stamhoofd": "Je kan geen documenten aanmaken in de gratis versie van Stamhoofd",
     "Dit is geen geldig zaalplan uit Stamhoofd": "Dit is geen geldig zaalplan uit Stamhoofd",
-    "Ticketverkoop via Stamhoofd": "Ticketverkoop via Stamhoofd"
+    "Ticketverkoop via Stamhoofd": "Ticketverkoop via Stamhoofd",
+    "Leden kunnen enkel zelf inschrijven via Stamhoofd": "Leden kunnen enkel zelf inschrijven via Stamhoofd",
+    "Deze beveiligingscode is ongeldig. Probeer het opnieuw of neem contact op met jouw vereniging om de juiste code te ontvangen.": "Deze beveiligingscode is ongeldig. Probeer het opnieuw of neem contact op met jouw vereniging om de juiste code te ontvangen."
 }
