Added docs to startview

--- a/shared/locales/src/digit/nl.json
+++ b/shared/locales/src/digit/nl.json
@@ -8,5 +8,5 @@
         "Verenigingen": "Groepen",
         "verenigingen": "groepen"
     },
-    "Welkom op het ledenportaal, hier kan je jouw gegevens beheren en je inschrijven.": "Welkom op het ledenportaal, hier kan je jouw gegevens beheren en je inschrijven bij een KSA groep of voor een activiteit."
+    "Welkom op het ledenportaal, hier kan je jouw gegevens beheren en je inschrijven.": "Welkom op het ledenplatform van KSA, hier kan je jouw gegevens beheren en je inschrijven bij een KSA groep of voor een activiteit."
 }
