--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -290,5 +290,17 @@
   "8694b1af-38d0-46f5-a9e2-c70bf96488ec": "Het tarief wordt pas echt verwijderd als je verder gaat en alle wijzigingen opslaat.",
   "9d283cbb-7ba2-4a16-88ec-ff0c19f39674": "Groepsnummer",
   "857e22fa-a4ac-4306-a631-d5133b6c8834": "Zoeken",
-  "54685a94-1ae2-46f9-aa4b-03f0b3939fd3": "shared.untitled"
+  "54685a94-1ae2-46f9-aa4b-03f0b3939fd3": "shared.untitled",
+  "7a63f22a-1f4d-4dfa-9030-47137ff52bab": "De locatie is verplicht",
+  "07963171-3e53-4aa7-b5f1-bce9470a62e9": "Indien aangevinkt kan deze soort activiteit niet aangemaakt worden zonder dat de locatie is ingevuld.",
+  "14a63393-32e4-448b-8cb5-aa0e0629667b": "Verwijder deze activiteit?",
+  "52312517-de77-4dd5-8c77-cef97c573578": "Ben je 100% zeker dat je deze activiteit wilt verwijderen? Vul dan de naam van de activiteit in ter bevestiging. Je verliest alle bijhorende informatie en kan dit niet ongedaan maken.",
+  "b584fc1c-6b13-442b-b2cc-f59e39fea6e7": "Bevestig de naam van de activiteit",
+  "deb2a251-2eab-4132-849e-6b1a8bc87300": "Naam van de activiteit",
+  "4a1ad6f2-d061-4fe0-8206-8540442ad038": "Ja, ik ben 100% zeker",
+  "db2fa1f9-4a3d-4f03-ad7d-fba479452d14": "Wil je de beveiligingscode resetten?",
+  "3341eabb-512a-40f9-8679-6420ae92f1c6": "Ja, resetten",
+  "d9870397-d89a-47ec-8ae6-0601e49b9116": "De huidige code zal niet meer gebruikt kunnen worden.",
+  "0c427a9d-2485-498f-bb88-a420843745f4": "Nieuwe beveiligingscode gegenereerd",
+  "2199906b-9125-4838-8ffc-3d88a47681d1": "Ben je zeker dat je wilt sluiten zonder op te slaan?"
 }
