--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -302,5 +302,9 @@
   "3341eabb-512a-40f9-8679-6420ae92f1c6": "Ja, resetten",
   "d9870397-d89a-47ec-8ae6-0601e49b9116": "De huidige code zal niet meer gebruikt kunnen worden.",
   "0c427a9d-2485-498f-bb88-a420843745f4": "Nieuwe beveiligingscode gegenereerd",
-  "2199906b-9125-4838-8ffc-3d88a47681d1": "Ben je zeker dat je wilt sluiten zonder op te slaan?"
+  "2199906b-9125-4838-8ffc-3d88a47681d1": "Ben je zeker dat je wilt sluiten zonder op te slaan?",
+  "5dac2674-d262-409c-a3f7-58b958c10876": "Ga naar het ledenportaal",
+  "6720c55c-b9a5-44ad-bdd5-4681e8e2478e": "Je hebt één openstaande persoonlijke actie in het ledenportaal.",
+  "5fc133cc-fc37-40c3-909f-3a4e690e6d9e": "Maximum {aantal} activiteiten per jaar",
+  "d43da88d-8890-4fa8-894d-e0a4fa6d3565": "Je hebt {count} openstaande persoonlijke acties in het ledenportaal."
 }
