--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -306,5 +306,8 @@
   "5dac2674-d262-409c-a3f7-58b958c10876": "Ga naar het ledenportaal",
   "6720c55c-b9a5-44ad-bdd5-4681e8e2478e": "Je hebt één openstaande persoonlijke actie in het ledenportaal.",
   "5fc133cc-fc37-40c3-909f-3a4e690e6d9e": "Maximum {aantal} activiteiten per jaar",
-  "d43da88d-8890-4fa8-894d-e0a4fa6d3565": "Je hebt {count} openstaande persoonlijke acties in het ledenportaal."
+  "d43da88d-8890-4fa8-894d-e0a4fa6d3565": "Je hebt {count} openstaande persoonlijke acties in het ledenportaal.",
+  "97475ade-4e97-4989-b2f4-fecd534db3c4": "Actief",
+  "cd6e3548-aea1-4f74-9c66-b1fa43de6438": "Ticketverkoop via Stamhoofd",
+  "68914509-aa54-40c7-9f53-7b8a02149198": "Stamhoofd"
 }
