--- a/shared/locales/src/en.json
+++ b/shared/locales/src/en.json
@@ -309,5 +309,15 @@
   "d43da88d-8890-4fa8-894d-e0a4fa6d3565": "Je hebt {count} openstaande persoonlijke acties in het ledenportaal.",
   "97475ade-4e97-4989-b2f4-fecd534db3c4": "Actief",
   "cd6e3548-aea1-4f74-9c66-b1fa43de6438": "Ticketverkoop via Stamhoofd",
-  "68914509-aa54-40c7-9f53-7b8a02149198": "Stamhoofd"
+  "68914509-aa54-40c7-9f53-7b8a02149198": "Stamhoofd",
+  "6355a1b9-7b98-48c4-9aca-91df9a22d66e": "Vlagmomenten",
+  "586cb220-498a-496a-8db5-89a4f10ba3df": "Niet nagekeken",
+  "b183b823-481c-46b1-951d-8a68dccc2517": "Selecteer alles",
+  "be92d7b0-92ad-42d6-b9e2-b414671ac57d": "Functies",
+  "6313a021-6795-4b7e-842c-f4574e433324": "Facturatiegegevens",
+  "b6458e9c-2ddf-4cb0-8051-fb6a220c4127": "Leeftijdsgroepen",
+  "7f531562-9609-456e-a8c3-2b373cad3f29": "Lokalen",
+  "36a44efc-4cb0-4180-8678-938cc51d3ae8": "E-mailadressen",
+  "d951a3d6-58f6-4e56-a482-2b8652ddd3bf": "Betaalmethodes",
+  "c75d45e6-b741-462b-899e-56a41e10918a": "Niet voltooid"
 }
