--- a/shared/locales/src/en.json
+++ b/shared/locales/src/en.json
@@ -319,5 +319,10 @@
   "7f531562-9609-456e-a8c3-2b373cad3f29": "Lokalen",
   "36a44efc-4cb0-4180-8678-938cc51d3ae8": "E-mailadressen",
   "d951a3d6-58f6-4e56-a482-2b8652ddd3bf": "Betaalmethodes",
-  "c75d45e6-b741-462b-899e-56a41e10918a": "Niet voltooid"
+  "c75d45e6-b741-462b-899e-56a41e10918a": "Niet voltooid",
+  "98a4f650-2fc9-455f-8454-dfe7a8140faa": "Inschrijvingen",
+  "de2222d9-c934-4d06-8702-9527686de012": "Je kan één of meerdere tarieven instellen en elk tarief een eigen naam geven. Een lid kan bij het inschrijven zelf één van de beschikbare tarieven kiezen.",
+  "ca88e88f-d859-4445-a13a-4b73c359cd6f": "Schrijf leden in",
+  "d14ea349-afa8-49f3-bdb0-aac23a41887f": "Schrijf leden in bij elke leeftijdsgroep.",
+  "d54c9b23-2d3c-49cd-b1fc-7e821d36fd41": "Inloggen op Stamhoofd"
 }
