--- a/shared/locales/src/digit/base.json
+++ b/shared/locales/src/digit/base.json
@@ -6,5 +6,6 @@
   },
   "b4307772-62dd-48a4-bae3-9d46df314727": "Welkom op Ravot. Zoek hieronder jouw lokale groep om je in te schrijven of om jouw gegevens te beheren.",
   "5dbc2f08-f2d0-43bc-973d-b789077ca3ad": "Welkom op Ravot voor jouw groep. Hier kan je jouw groep beheren, leden bekijken, en instellingen aanpassen.",
-  "b091538b-014e-4db2-8241-9ed98e0c51c7": "Breng een kost in rekening per betaling (dus slechts één keer, ook als er meerdere zaken worden afgerekend in één betaling). Wettelijk gezien is het niet toegestaan dat je deze laat afhangen van de gekozen betaalmethode (dat is dus niet mogelijk)."
+  "b091538b-014e-4db2-8241-9ed98e0c51c7": "Breng een kost in rekening per betaling (dus slechts één keer, ook als er meerdere zaken worden afgerekend in één betaling). Wettelijk gezien is het niet toegestaan dat je deze laat afhangen van de gekozen betaalmethode (dat is dus niet mogelijk).",
+  "d54c9b23-2d3c-49cd-b1fc-7e821d36fd41": "Inloggen bij KSA"
 }
