--- a/shared/locales/src/digit/en.json
+++ b/shared/locales/src/digit/en.json
@@ -8,5 +8,6 @@
   "81c91169-db1e-4819-8716-5382ffbaa43b": "Het groepsnummer is een unieke code voor deze vereniging. Deze wordt in de URL-balk van de browser gebruikt.",
   "2cc5355d-3c19-4a6e-a2c7-1d93e423a8d2": "Groepsnummer",
   "b4307772-62dd-48a4-bae3-9d46df314727": "Welkom op Ravot. Zoek hieronder de groep waar je wilt inschrijven of ga naar het algemene ledenportaal.",
-  "369440db-a9e0-4530-a06b-3ea05cc6a2b0": "Welkom op het ledenplatform van KSA, hier kan je jouw gegevens beheren en je inschrijven bij een KSA groep of voor een activiteit."
+  "369440db-a9e0-4530-a06b-3ea05cc6a2b0": "Welkom op het ledenplatform van KSA, hier kan je jouw gegevens beheren en je inschrijven bij een KSA groep of voor een activiteit.",
+  "d54c9b23-2d3c-49cd-b1fc-7e821d36fd41": "Inloggen bij KSA"
 }
