Added confirmation message

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -329,5 +329,6 @@
   "De functie x staat uit, maar je hebt nog x ingesteld": "De functie {financialSupportTitle} staat uit, maar je hebt nog {financialSupportPriceName} ingesteld",
   "x moet minstens x lager zijn dan de standaardprijs": "{financialSupportPriceName} moet minstens {minDifference} lager zijn dan de standaardprijs",
   "Reken een bedrag aan aan de geselecteerde groepen.": "Reken een bedrag aan aan de {count} geselecteerde groepen.",
-  "Reken een bedrag aan aan de geselecteerde groep.": "Reken een bedrag aan aan de geselecteerde groep."
+  "Reken een bedrag aan aan de geselecteerde groep.": "Reken een bedrag aan aan de geselecteerde groep.",
+  "Weet je zeker dat je het bedrag wilt aanrekenen?": "Weet je zeker dat je {total} wilt aanrekenen aan {count} groep(en)?"
 }
