Added new translations

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -20,7 +20,7 @@
   "bc8578de-ee3c-4aac-bd19-3fd4040168a4": "De naam van deze vereniging",
   "7066aee7-9e51-4767-b288-460646ceca50": "Nieuwe vereniging",
   "a5b61d4d-207f-485c-8748-cbb04fcb2d23": "Beheer alle instellingen van deze vereniging",
-  "0be39baa-0b8e-47a5-bd53-0feeb14a0f93": "Tags",
+  "0be39baa-0b8e-47a5-bd53-0feeb14a0f93": "Hiërarchie",
   "81c91169-db1e-4819-8716-5382ffbaa43b": "De URI is een unieke en leesbare code voor deze vereniging, bestaande uit enkel kleine letters en koppeltekens. Deze wordt in de URL-balk van de browser gebruikt op enkele plaatsen, maar is anders niet zichtbaar.",
   "2cc5355d-3c19-4a6e-a2c7-1d93e423a8d2": "URI",
   "5f0e24bb-10db-428b-a480-6f73d959cafa": "De link naar de website van deze vereniging.",
@@ -325,10 +325,47 @@
   "ca88e88f-d859-4445-a13a-4b73c359cd6f": "Schrijf leden in",
   "d14ea349-afa8-49f3-bdb0-aac23a41887f": "Schrijf leden in bij elke leeftijdsgroep.",
   "d54c9b23-2d3c-49cd-b1fc-7e821d36fd41": "Inloggen op Stamhoofd",
-  "Je betaalt ? euro aan KSA Nationaal.": "Je betaalt {price} aan KSA Nationaal.",
-  "De functie x staat uit, maar je hebt nog x ingesteld": "De functie {financialSupportTitle} staat uit, maar je hebt nog {financialSupportPriceName} ingesteld",
-  "x moet minstens x lager zijn dan de standaardprijs": "{financialSupportPriceName} moet minstens {minDifference} lager zijn dan de standaardprijs",
-  "Reken een bedrag aan aan de geselecteerde groepen.": "Reken een bedrag aan aan de {count} geselecteerde groepen.",
-  "Reken een bedrag aan aan de geselecteerde groep.": "Reken een bedrag aan aan de geselecteerde groep.",
-  "Weet je zeker dat je het bedrag wilt aanrekenen?": "Weet je zeker dat je {total} wilt aanrekenen aan {count} groep(en)?"
+  "75815048-939a-4ac1-a81c-f23fc3ec5006": "Je betaalt {price} aan KSA Nationaal.",
+  "a83523bb-ba90-4a6c-a73a-4d4f12defe7a": "De functie {financialSupportTitle} staat uit, maar je hebt nog {financialSupportPriceName} ingesteld",
+  "77578f4e-049c-4d64-b63c-357fb6d0d7ac": "{financialSupportPriceName} moet minstens {minDifference} lager zijn dan de standaardprijs",
+  "88119ffc-b692-4222-8217-75a9fa64f675": "Reken een bedrag aan aan de {count} geselecteerde groepen.",
+  "51c27c5e-c2be-441b-a571-7bf573ee6848": "Reken een bedrag aan aan de geselecteerde groep.",
+  "9305016a-babf-4606-af6c-e8ef9f2ba91e": "Weet je zeker dat je {total} wilt aanrekenen aan {count} groep(en)?",
+  "00bdd5bd-af3f-4f83-abe0-696d5b872ca9": "Aanrekenen",
+  "4a5ca65c-3a96-4ca0-991c-518a9e92adb7": "Aangerekend door",
+  "11d6f2fc-c72d-4c18-aa6d-b8118c2aaa5c": "Beschrijving",
+  "e4a32f97-64aa-43d7-803f-3d18f7cdf8e4": "Beschrijving van de aanrekening",
+  "7453643b-fdb2-4aa1-9964-ddd71762c983": "Bedrag",
+  "a0f52fae-a4e6-4c3c-a6af-83218dd399b2": "Aantal",
+  "e412b71e-566b-41d4-8b1f-97ab7f140b29": "Bedrag aanrekenen",
+  "ddf3558e-ed2e-4217-9155-495c3984d769": "Ben je zeker dat je wilt sluiten zonder een bedrag aan te rekenen?",
+  "f97c98d7-c64e-4cab-ac8f-fdda5b1bfb54": "Niet aanrekenen",
+  "8565df22-3559-44b1-be1f-de9d1c3a7837": "Aangesloten sinds",
+  "bf20a769-772d-46b2-9b48-2ea29c96f113": "Via",
+  "f18beb62-a9e8-4881-865c-28ad534b6f24": "Navigatie",
+  "9a6474d8-0bb5-4760-8dca-e85ba79035ce": "Instellingen",
+  "c3158561-e0dc-4dd5-8581-d2d861238946": "Leden",
+  "bda3721a-3b39-4409-9407-e0b3abde0009": "Beheerdersportaal",
+  "2a1a65d9-d04a-44f2-a86e-0d500f6186ee": "Kies een organisatie",
+  "6f707b06-382b-417f-b64a-59c7076a08cd": "Dit is de organisatie die het totale bedrag zal aanrekenen aan de geselecteerde organisatie(s).",
+  "b381ed6f-c509-418d-9668-7c161a0fa652": "Subtags",
+  "4139ef30-55c8-4775-b97a-69b3a8b7d112": "Groepen met deze subtags hebben automatisch deze tag.",
+  "20699886-7112-43f5-b38c-f5b686c37257": "Voeg tag toe",
+  "e5c15476-6092-45c9-ac55-541f45720c71": "Verwijder deze tag",
+  "ceaaf7f7-900e-497e-91f5-16c3a173b7bf": "Subtags zullen ook verwijderd worden.",
+  "5bb7b4d5-def0-431d-ba3c-e34ffc7ee777": "Verwijderen",
+  "f87ed463-4821-4877-96db-03c693f46013": "Tag toevoegen",
+  "f86a093f-c6ae-42d0-b5c4-4035a4d32f74": "Betalingen duren tot 5 werkdagen, geen onmiddellijke bevestiging van betaling. Mislukte betalingen kunnen kosten met zich meebrengen.",
+  "8827deb6-8c18-4b98-a495-57696801a73e": "Er zijn nog geen bestellingen.",
+  "4a07f8e5-c16e-4706-9387-9d3ded9e2b3c": "Type",
+  "f7300ff2-638b-47c2-97b5-e8774aa0b6f5": "Naam",
+  "28c2bc66-231f-44f3-9249-c1981b871a1f": "Openstaand bedrag",
+  "0637e394-fbd7-42ea-9a1b-5acdcc86419a": "Er zijn geen openstaande bedragen",
+  "e09c97db-85d7-40b0-8043-65fa24a09a01": "Te ontvangen bedragen",
+  "a654551b-6dcd-48a9-a5c5-4609fdcba5f3": "Ravot is in orde",
+  "8e77d1c1-87dc-4fdb-ad6e-13145bc96f78": "Breng Stamhoofd in orde",
+  "ab0c7981-0d5f-4c36-bd3f-07ddc2a63759": "Jouw groep bevindt zich in een ander werkjaar dan KSA Nationaal.",
+  "b66501e0-f6de-4259-95ef-13590b24182b": "vereniging",
+  "146d0874-2f4d-4374-8808-61a4bd953354": "lid",
+  "fbb0dee5-c500-4bb4-81d6-945666ae4784": "account"
 }
