Updated setup step translations

--- a/shared/locales/src/digit/en.json
+++ b/shared/locales/src/digit/en.json
@@ -9,5 +9,8 @@
   "2cc5355d-3c19-4a6e-a2c7-1d93e423a8d2": "Groepsnummer",
   "b4307772-62dd-48a4-bae3-9d46df314727": "Welkom op Ravot. Zoek hieronder de groep waar je wilt inschrijven of ga naar het algemene ledenportaal.",
   "369440db-a9e0-4530-a06b-3ea05cc6a2b0": "Welkom op het ledenplatform van KSA, hier kan je jouw gegevens beheren en je inschrijven bij een KSA groep of voor een activiteit.",
-  "d54c9b23-2d3c-49cd-b1fc-7e821d36fd41": "Inloggen bij KSA"
+  "d54c9b23-2d3c-49cd-b1fc-7e821d36fd41": "Inloggen bij KSA",
+  "a654551b-6dcd-48a9-a5c5-4609fdcba5f3": "Ravot is in orde",
+  "8e77d1c1-87dc-4fdb-ad6e-13145bc96f78": "Breng Ravot in orde",
+  "ab0c7981-0d5f-4c36-bd3f-07ddc2a63759": "Jouw groep bevindt zich in een ander werkjaar dan KSA Nationaal."
 }
