--- a/shared/locales/src/chiro/base.json
+++ b/shared/locales/src/chiro/base.json
@@ -6,5 +6,8 @@
   },
   "b4307772-62dd-48a4-bae3-9d46df314727": "Welkom op het ledenportaal van Chiro. Zoek hieronder jouw groep om je in te schrijven of om jouw gegevens te beheren.",
   "5dbc2f08-f2d0-43bc-973d-b789077ca3ad": "Welkom op het beheerdersportaal van Chiro. Hier kan je jouw groep beheren, leden bekijken, en instellingen aanpassen.",
-  "b091538b-014e-4db2-8241-9ed98e0c51c7": "Breng een kost in rekening per betaling (dus slechts één keer, ook als er meerdere zaken worden afgerekend in één betaling). Wettelijk gezien is het niet toegestaan dat je deze laat afhangen van de gekozen betaalmethode (dat is dus niet mogelijk)."
+  "b091538b-014e-4db2-8241-9ed98e0c51c7": "Breng een kost in rekening per betaling (dus slechts één keer, ook als er meerdere zaken worden afgerekend in één betaling). Wettelijk gezien is het niet toegestaan dat je deze laat afhangen van de gekozen betaalmethode (dat is dus niet mogelijk).",
+  "a654551b-6dcd-48a9-a5c5-4609fdcba5f3": "Jouw Chirogroep is in orde",
+  "8e77d1c1-87dc-4fdb-ad6e-13145bc96f78": "Breng jouw Chirogroep in orde",
+  "ab0c7981-0d5f-4c36-bd3f-07ddc2a63759": "Jouw groep bevindt zich in een ander werkjaar."
 }
