--- a/shared/locales/src/chiro/base.json
+++ b/shared/locales/src/chiro/base.json
@@ -7,7 +7,11 @@
     "Vereniging": "Groep",
     "vereniging": "groep",
     "Verenigingen": "Groepen",
-    "verenigingen": "groepen"
+    "verenigingen": "groepen",
+    "Leeftijdsgroepen": "Afdelingen",
+    "leeftijdsgroepen": "afdelingen",
+    "Leeftijdsgroep": "Afdeling",
+    "leeftijdsgroep": "afdeling"
   },
   "b4307772-62dd-48a4-bae3-9d46df314727": "Welkom op het ledenportaal van Chiro. Zoek hieronder jouw groep om je in te schrijven of om jouw gegevens te beheren.",
   "5dbc2f08-f2d0-43bc-973d-b789077ca3ad": "Welkom op het beheerdersportaal van Chiro. Hier kan je jouw groep beheren, leden bekijken, en instellingen aanpassen.",
