--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -367,5 +367,16 @@
   "ab0c7981-0d5f-4c36-bd3f-07ddc2a63759": "Jouw groep bevindt zich in een ander werkjaar dan KSA Nationaal.",
   "b66501e0-f6de-4259-95ef-13590b24182b": "vereniging",
   "146d0874-2f4d-4374-8808-61a4bd953354": "lid",
-  "fbb0dee5-c500-4bb4-81d6-945666ae4784": "account"
+  "fbb0dee5-c500-4bb4-81d6-945666ae4784": "account",
+  "9cff0038-a8c2-49bd-9353-fab8308a83ad": "Nieuwe standaard leeftijdsgroep",
+  "b486463a-3a65-4fca-b7cb-e3e93b0cfe4b": "Standaard leeftijdsgroep bewerken",
+  "05723781-9357-41b2-9fb8-cb4f80dde7f9": "Groepsnummer",
+  "b0cb950d-856f-4068-bf2f-9636927020f4": "Functies",
+  "ec2de613-f06f-4d9a-888a-40f98b6b3727": "Hiërarchie",
+  "6705ae0e-8239-4bc0-895d-10128cb5c6c4": "Standaard leeftijdsgroep",
+  "11007b85-a7ac-48d8-9480-669831cef564": "Aansluitingstatus",
+  "6d4c31c6-c70b-4cf2-8890-b2d4507913c7": "Actief",
+  "cc528c3f-aed3-4eb6-9db1-70aae5261a28": "Verlopen",
+  "33906077-a1d8-4daa-9914-ce129538f68c": "Inactief",
+  "b0ed8db1-097d-4739-9407-e8aae5e1413c": "Actieve aansluiting"
 }
