Added new translations

--- a/shared/locales/src/en.json
+++ b/shared/locales/src/en.json
@@ -401,5 +401,8 @@
   "d756277c-4655-4e92-afcc-ae3c9f615190": "Nationale of regionale activiteit",
   "987c7ee6-8ee2-41d7-823e-db0ff590ea7d": "Zichtbaar in de kalender",
   "113f3407-9b00-4e86-bedd-e61614e78a0b": "Organisator",
-  "2662a425-f996-479b-a1fc-8498f068ea97": "Deze activiteit is enkel zichtbaar voor leden van de organisator."
+  "2662a425-f996-479b-a1fc-8498f068ea97": "Deze activiteit is enkel zichtbaar voor leden van de organisator.",
+  "4bff53d6-7455-45fc-aa6d-ae0bafbe0b47": "Elke lokale groep moet per inschrijvingsgroep een standaard leeftijdsgroep koppelen. Op die manier kan de benaming van de groep gekoppeld worden aan de algemene benaming van de koepel.",
+  "a4f0a3f5-60a5-4959-800c-613e8c79d6d9": "Groep toevoegen",
+  "f80e230f-9621-439d-b4ba-bc49fb921698": "De wijzigingen zijn opgeslagen"
 }
