--- a/shared/locales/src/digit/base.json
+++ b/shared/locales/src/digit/base.json
@@ -10,5 +10,7 @@
   "d54c9b23-2d3c-49cd-b1fc-7e821d36fd41": "Inloggen bij KSA",
   "a654551b-6dcd-48a9-a5c5-4609fdcba5f3": "Ravot is in orde",
   "8e77d1c1-87dc-4fdb-ad6e-13145bc96f78": "Breng Ravot in orde",
-  "ab0c7981-0d5f-4c36-bd3f-07ddc2a63759": "Jouw groep bevindt zich in een ander werkjaar dan KSA Nationaal."
+  "ab0c7981-0d5f-4c36-bd3f-07ddc2a63759": "Jouw groep bevindt zich in een ander werkjaar dan KSA Nationaal.",
+    "528545c4-028b-4711-9b16-f6fa990c3130": "Aansluiting/verzekering KSA Nationaal*",
+  "e99c7d31-f9fe-4e0f-8947-bdc30784de5b": "* Voor de aansluiting bij KSA Nationaal moet je nog een correcte standaard inschrijvingsgroep selecteren zodat de benaming die jouw groep gebruikt gekoppeld kan worden aan de benaming van KSA Nationaal."
 }
