--- a/shared/locales/src/chiro/base.json
+++ b/shared/locales/src/chiro/base.json
@@ -22,5 +22,9 @@
   "8e77d1c1-87dc-4fdb-ad6e-13145bc96f78": "Breng jouw Chirogroep in orde",
   "ab0c7981-0d5f-4c36-bd3f-07ddc2a63759": "Jouw groep bevindt zich in een ander werkjaar.",
   "528545c4-028b-4711-9b16-f6fa990c3130": "Aansluiting/verzekering Chiro*",
-"e99c7d31-f9fe-4e0f-8947-bdc30784de5b": "* Voor de aansluiting bij Chiro moet je nog een correcte standaard inschrijvingsgroep selecteren zodat de benaming die jouw groep gebruikt gekoppeld kan worden aan de benaming van Chiro."
+  "e99c7d31-f9fe-4e0f-8947-bdc30784de5b": "* Voor de aansluiting bij Chiro moet je nog een correcte standaard inschrijvingsgroep selecteren zodat de benaming die jouw groep gebruikt gekoppeld kan worden aan de benaming van Chiro.",
+  "61f434a9-49e6-4a92-b613-965dfd807dca": "Aansluiting Chiro",
+  "f5229cc1-c908-4409-855a-1dba40371815": "Jouw leiding kan in het ledenplatform jouw beveiligingscode opzoeken en aan jou doorgeven. Ben je zelf leiding, vraag het dan aan jouw medeleiding of Chiro.",
+  "525747e4-48df-4f20-979e-3c18142e64a5": "Het bedrag zal achteraf door Chiro aan {name} worden gefactureerd",
+  "237be7e0-4534-4008-b7bc-3e6db776a72a": "Leden die je inschrijft in een afdeling die je koppelt aan een standaard afdeling van Chiro worden automatisch aangesloten. Voor andere leden kan je hier een aansluiting manueel aanvragen."
 }
