--- a/shared/locales/src/en.json
+++ b/shared/locales/src/en.json
@@ -421,5 +421,9 @@
   "5e99e2aa-a240-4894-8de3-f8f0fef20068": "Groepsnummer",
   "6bf80a05-84b0-47ba-ad41-66e2a106669b": "Filter alle verenigingen die een lid hebben die aan deze voorwaarden voldoet.",
   "528545c4-028b-4711-9b16-f6fa990c3130": "Aansluiting/verzekering Stamhoofd*",
-  "e99c7d31-f9fe-4e0f-8947-bdc30784de5b": "* Voor de aansluiting bij Stamhoofd moet je nog een correcte standaard inschrijvingsgroep selecteren zodat de benaming die jouw groep gebruikt gekoppeld kan worden aan de benaming van Stamhoofd."
+  "e99c7d31-f9fe-4e0f-8947-bdc30784de5b": "* Voor de aansluiting bij Stamhoofd moet je nog een correcte standaard inschrijvingsgroep selecteren zodat de benaming die jouw groep gebruikt gekoppeld kan worden aan de benaming van Stamhoofd.",
+  "61f434a9-49e6-4a92-b613-965dfd807dca": "Aansluiting KSA Nationaal",
+  "f5229cc1-c908-4409-855a-1dba40371815": "Jouw leiding kan in Ravot jouw beveiligingscode opzoeken en aan jou doorgeven. Ben je zelf leiding, vraag het dan aan jouw medeleiding of KSA Nationaal.",
+  "525747e4-48df-4f20-979e-3c18142e64a5": "Het bedrag zal achteraf door KSA Nationaal aan {name} worden gefactureerd",
+  "237be7e0-4534-4008-b7bc-3e6db776a72a": "Leden die je inschrijft in een leeftijdsgroep die je koppelt aan een standaard leeftijdsgroep van KSA Nationaal worden automatisch aangesloten. Voor andere leden kan je hier een aansluiting manueel aanvragen."
 }
