--- a/shared/locales/src/chiro/base.json
+++ b/shared/locales/src/chiro/base.json
@@ -26,5 +26,7 @@
   "61f434a9-49e6-4a92-b613-965dfd807dca": "Aansluiting Chiro",
   "f5229cc1-c908-4409-855a-1dba40371815": "Jouw leiding kan in het ledenplatform jouw beveiligingscode opzoeken en aan jou doorgeven. Ben je zelf leiding, vraag het dan aan jouw medeleiding of Chiro.",
   "525747e4-48df-4f20-979e-3c18142e64a5": "Het bedrag zal achteraf door Chiro aan {name} worden gefactureerd",
-  "237be7e0-4534-4008-b7bc-3e6db776a72a": "Leden die je inschrijft in een afdeling die je koppelt aan een standaard afdeling van Chiro worden automatisch aangesloten. Voor andere leden kan je hier een aansluiting manueel aanvragen."
+  "237be7e0-4534-4008-b7bc-3e6db776a72a": "Leden die je inschrijft in een afdeling die je koppelt aan een standaard afdeling van Chiro worden automatisch aangesloten. Voor andere leden kan je hier een aansluiting manueel aanvragen.",
+  "60871aaf-1b90-4a7c-a755-a4aeb0585a8e": "Dit lid is niet aangesloten bij Chiro, en is daardoor ook niet verzekerd",
+  "ec0c482e-0528-499f-82fa-b081bf708ded": "Dit lid is bij geen enkele Chirogroep aangesloten voor het huidige werkjaar en kan daardoor niet aangesloten worden"
 }
