--- a/shared/locales/src/en.json
+++ b/shared/locales/src/en.json
@@ -425,5 +425,7 @@
   "61f434a9-49e6-4a92-b613-965dfd807dca": "Aansluiting KSA Nationaal",
   "f5229cc1-c908-4409-855a-1dba40371815": "Jouw leiding kan in Ravot jouw beveiligingscode opzoeken en aan jou doorgeven. Ben je zelf leiding, vraag het dan aan jouw medeleiding of KSA Nationaal.",
   "525747e4-48df-4f20-979e-3c18142e64a5": "Het bedrag zal achteraf door KSA Nationaal aan {name} worden gefactureerd",
-  "237be7e0-4534-4008-b7bc-3e6db776a72a": "Leden die je inschrijft in een leeftijdsgroep die je koppelt aan een standaard leeftijdsgroep van KSA Nationaal worden automatisch aangesloten. Voor andere leden kan je hier een aansluiting manueel aanvragen."
+  "237be7e0-4534-4008-b7bc-3e6db776a72a": "Leden die je inschrijft in een leeftijdsgroep die je koppelt aan een standaard leeftijdsgroep van KSA Nationaal worden automatisch aangesloten. Voor andere leden kan je hier een aansluiting manueel aanvragen.",
+  "c4cc8f8b-d490-4182-ba92-7fce435945e7": "Ledenportaal",
+  "40b31f32-5a02-488d-beb3-d987ea5c9315": "De link naar deze activiteit in het ledenportaal. Deel deze link met leden."
 }
