--- a/shared/locales/src/chiro/base.json
+++ b/shared/locales/src/chiro/base.json
@@ -31,5 +31,6 @@
   "237be7e0-4534-4008-b7bc-3e6db776a72a": "Leden die je inschrijft in een afdeling die je koppelt aan een standaard afdeling van Chiro worden automatisch aangesloten. Voor andere leden kan je hier een aansluiting manueel aanvragen.",
   "60871aaf-1b90-4a7c-a755-a4aeb0585a8e": "Dit lid is niet aangesloten bij Chiro, en is daardoor ook niet verzekerd",
   "ec0c482e-0528-499f-82fa-b081bf708ded": "Dit lid is bij geen enkele Chirogroep aangesloten voor het huidige werkjaar en kan daardoor niet aangesloten worden",
-  "75815048-939a-4ac1-a81c-f23fc3ec5006": "Je betaalt {price} aan Chiro."
+  "75815048-939a-4ac1-a81c-f23fc3ec5006": "Je betaalt {price} aan Chiro.",
+  "d54c9b23-2d3c-49cd-b1fc-7e821d36fd41": "Inloggen bij Chiro"
 }
