--- a/shared/locales/package.json
+++ b/shared/locales/package.json
@@ -14,7 +14,8 @@
     "exports": {
         ".": {
             "import": "./esm/dist/index.js",
-            "require": "./dist/index.js"
+            "require": "./dist/index.js",
+            "types": "./dist/index.d.ts"
         }
     },
     "scripts": {
