--- a/backend/shared/i18n/tsconfig.json
+++ b/backend/shared/i18n/tsconfig.json
@@ -27,6 +27,8 @@
         "../../*.d.ts"
     ],
     "exclude": [
-        "node_modules"
+        "node_modules",
+        "dist",
+        "dist/**/*"
     ]
 }
