--- a/shared/locales/src/keeo/base.json
+++ b/shared/locales/src/keeo/base.json
@@ -1,6 +1,7 @@
 {
   "replacements": {
-    "Stamhoofd": "Keeo"
+    "Stamhoofd": "Keeo",
+    "KSA Nationaal": "FOS Open Scouting"
   },
   "b4307772-62dd-48a4-bae3-9d46df314727": "Welkom op Keeo. Zoek hieronder jouw eenheid om je in te schrijven of om jouw gegevens te beheren.",
   "5dbc2f08-f2d0-43bc-973d-b789077ca3ad": "Welkom op het beheerdersportaal van Keeo. Hier kan je jouw eenheid beheren, leden bekijken, en instellingen aanpassen.",
