--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -199,7 +199,7 @@
   "1c459ea7-2652-466e-9fc7-23278d21ca36": "Inloggen",
   "1af084bf-42d6-4a59-a7da-d1e87c6dba8e": "Dit lid is niet langer aangesloten bij KSA Nationaal, en de verzekering loopt binnenkort af",
   "9ffdbf7d-83b1-45e3-8ad5-db07b4a22d1e": "Naam",
-  "60871aaf-1b90-4a7c-a755-a4aeb0585a8e": "Dit lid is niet aangesloten bij KSA-Nationaal, en is daardoor ook niet verzekerd",
+  "60871aaf-1b90-4a7c-a755-a4aeb0585a8e": "Dit lid is niet aangesloten bij KSA Nationaal, en is daardoor ook niet verzekerd",
   "1a16a32a-7ee4-455d-af3d-6073821efa8f": "Niet ingeschreven",
   "3db64326-c892-4fdb-8293-3d713453383a": "Optioneel",
   "d94db7a1-4167-440a-b556-62ff3291555b": "Verenigingen",
