--- a/shared/locales/src/en.json
+++ b/shared/locales/src/en.json
@@ -427,5 +427,32 @@
   "525747e4-48df-4f20-979e-3c18142e64a5": "Het bedrag zal achteraf door KSA Nationaal aan {name} worden gefactureerd",
   "237be7e0-4534-4008-b7bc-3e6db776a72a": "Leden die je inschrijft in een leeftijdsgroep die je koppelt aan een standaard leeftijdsgroep van KSA Nationaal worden automatisch aangesloten. Voor andere leden kan je hier een aansluiting manueel aanvragen.",
   "c4cc8f8b-d490-4182-ba92-7fce435945e7": "Ledenportaal",
-  "40b31f32-5a02-488d-beb3-d987ea5c9315": "De link naar deze activiteit in het ledenportaal. Deel deze link met leden."
+  "40b31f32-5a02-488d-beb3-d987ea5c9315": "De link naar deze activiteit in het ledenportaal. Deel deze link met leden.",
+  "faa31f24-a42f-454b-9ceb-417c46dcee0d": "Aantal",
+  "8e0924af-042c-42ab-85e1-dda0a2106b98": "Unieke leden",
+  "e886fb7a-9312-4e74-b426-5acb694fe009": "Totaal bedrag",
+  "b789017f-58d2-438b-b73a-2a4d075e3c5b": "Unieke groepen",
+  "d3903009-28d5-48d6-b109-c89b88a9f36e": "Er zijn nog geen documenten.",
+  "f2eb0c04-0dca-4c8e-b920-7044a65aee6a": "Gegevens bewerken",
+  "2f2899e5-4c62-4452-97d2-97f4fd670e86": "GroepsID",
+  "4824fef7-9c02-4a3f-b2fd-117857a7b82c": "Naam ouder",
+  "f8bfc32b-5bc4-4ccc-82ed-514dffd011c2": "Straatnaam",
+  "99ea968b-f820-4791-96c3-bb1033603013": "Huisnummer",
+  "8265d9e0-32c1-453c-ab2f-d31f1eb244c3": "Proefperiodes",
+  "89a760d7-8995-458c-9635-da104971e95c": "Via proefperiodes kan je nieuwe leden de kans geven om in te schrijven zonder te betalen. Na een ingestelde periode krijgen ze vervolgens een betaalverzoek (vroeger betalen is steeds mogelijk) en kunnen ze betalen via het ledenportaal. Als je leden voor het einde van de proefperiode terug uitschrijft, wordt het openstaande bedrag ook verwijderd.",
+  "f0ceba51-bad2-4454-9a9b-4b12f0983c82": "Aantal dagen op proef",
+  "d68a6d63-d782-49e2-84a5-4f77dbfa2977": "Nieuwe leden hebben automatisch recht op een proefperiode van {days} voor de aansluiting bij KSA Nationaal.",
+  "5ecd5e10-f233-4a6c-8acd-c1abff128a21": "Datum eerste activiteit of vergadering",
+  "db636f2c-371d-4209-bd44-eaa6984c2813": "Als nieuwe leden inschrijven voor deze datum, begint de proefperiode pas te lopen vanaf deze datum. Handig als de activiteiten pas na het begin van de inschrijvingen starten.",
+  "99b87ddc-3a72-45fa-923a-10bf130fb4de": "Volgjaar",
+  "a1ae6e8f-dbcd-4a53-a67c-0244d28ccb74": "Startdatum",
+  "3ebf23d3-9609-42b3-b7ae-54bd9c4d08a1": "Een lid kan inschrijven in een leeftijdsgroep met leeftijdslimieten alsof het geboren werd in het volgjaar.",
+  "9f80f234-d51c-4ef2-ba59-fc55fb1044c4": "Stopgezet",
+  "7e75723b-d09c-4722-942f-3ae2777de14c": "Proefperiode",
+  "29343dad-93c5-4e72-a6d5-3960cfbfcf42": "Dit lid heeft een proefaansluiting bij KSA Nationaal",
+  "65cbb5ad-4a6b-4800-a7db-59627fb576ef": "Dit lid is niet aangesloten in {werkjaar} bij KSA Nationaal, en is daardoor ook niet verzekerd.",
+  "41464f90-088a-4c6a-827b-cd5907ad1fac": "Deze aansluiting werd automatisch aangemaakt",
+  "8e515034-5d58-4042-84e6-7e32943dbdec": "Deze aansluiting werd reeds aangerekend",
+  "d9ba4476-8dbe-46d5-bad9-e49c062cbfa1": "Terug te betalen",
+  "b4a0f9cb-ecd0-4f9b-bd28-9e4a6c8b1518": "inschrijving"
 }
