--- a/shared/locales/src/keeo/nl.json
+++ b/shared/locales/src/keeo/nl.json
@@ -3,10 +3,17 @@
     "Verenigingen": "Eenheden",
     "verenigingen": "eenheden",
     "Vereniging": "Eenheid",
-    "vereniging": "eenheid"
+    "vereniging": "eenheid",
+    "Groepen": "Eenheden",
+    "groepen": "eenheden",
+    "werkjaar": "scoutsjaar",
+    "Werkjaar": "Scoutsjaar",
+    "Werkjaren": "Scoutsjaren",
+    "werkjaren": "scoutsjaren"
   },
   "81c91169-db1e-4819-8716-5382ffbaa43b": "Het eenheidsnummer is een unieke code voor deze eenheid. Deze wordt in de URL-balk van de browser gebruikt.",
   "2cc5355d-3c19-4a6e-a2c7-1d93e423a8d2": "Eenheidsnummer",
   "b4307772-62dd-48a4-bae3-9d46df314727": "Welkom op Keeo. Zoek hieronder jouw eenheid om je in te schrijven of om jouw gegevens te beheren.",
-  "369440db-a9e0-4530-a06b-3ea05cc6a2b0": "Welkom op het ledenplatform van FOS Open Scouting, hier kan je jouw gegevens beheren en je inschrijven bij een eenheid of voor een activiteit."
+  "369440db-a9e0-4530-a06b-3ea05cc6a2b0": "Welkom op het ledenplatform van FOS Open Scouting, hier kan je jouw gegevens beheren en je inschrijven bij een eenheid of voor een activiteit.",
+  "f02ad9a5-f0b4-483e-961c-491ddf7d6f6a": "Ledenportaal"
 }
