--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -454,5 +454,50 @@
   "41464f90-088a-4c6a-827b-cd5907ad1fac": "Deze aansluiting werd automatisch aangemaakt",
   "8e515034-5d58-4042-84e6-7e32943dbdec": "Deze aansluiting werd reeds aangerekend",
   "d9ba4476-8dbe-46d5-bad9-e49c062cbfa1": "Terug te betalen",
-  "b4a0f9cb-ecd0-4f9b-bd28-9e4a6c8b1518": "inschrijving"
+  "b4a0f9cb-ecd0-4f9b-bd28-9e4a6c8b1518": "inschrijving",
+  "6e884f27-427f-4f85-914c-d5c2780253b0": "Groepen",
+  "db085652-c3d0-4d2c-aa4b-53ef4234d480": "Beschikbaarheid",
+  "5fe7a400-8c6a-42ba-b920-c8518e60e091": "Beperk welke verenigingen hun leden kunnen aansluiten met deze aansluiting.",
+  "37d201fd-287d-4957-b559-b882744ea886": "Beperk tot leden met een registratie bij deze standaard leeftijdsgroepen.",
+  "02017e6d-47b0-4867-b590-be85a9b72008": "Beperk verenigingen",
+  "3a75616e-f4ef-4dbd-8e35-8fe74571e442": "Beperk leeftijdsgroepen",
+  "ac0594f0-af79-465b-84d5-568da90af8b6": "Notificaties voor openstaande bedragen",
+  "cb1953f4-7e4f-498d-b8d8-54a885753e23": "Proefperiode",
+  "ceba695c-105b-49c9-aaa4-bf716c4aec6b": "tags",
+  "a8bf2d7d-3208-4c18-bac3-2cc97b629ad1": "Laatste automatische herinneringsmail",
+  "cd0975fc-75c4-4c1e-b80a-f611f0992caa": "Alle groepen",
+  "e6405d38-2bd8-4e24-8e35-24f4daea2a37": "Gegevens van verenigingen",
+  "f5bf8b84-52d2-49a3-b4b4-73573b320739": "Kies welke informatie je verzamelt van verenigingen",
+  "d185d3ca-e20f-43a2-a79f-f77404b8f33a": "Naam van jouw vereniging",
+  "cb51b737-c4cf-4ea7-aeb5-b5736a43c333": "De naam van je vereniging",
+  "840ac72d-d4b3-40ea-afb4-b0109e88c640": "Naam van je vereniging (kort)",
+  "2803b7f1-be08-48ec-8b4c-2dced27f7113": "Breid het aantal gegevens van verenigingen zelf nog uit.",
+  "5959a6a9-064a-413c-871f-c74a145ed569": "Oeps, je kan nog geen evenementen met inschrijvingen aanmaken in deze periode. Dit werkjaar is nog niet aangemaakt in het systeem.",
+  "d41cdbe3-57e3-4a2e-83bc-cb9e65c9c840": "Je kan een functie enkel toekennen aan leden die zijn ingeschreven in het huidige werkjaar",
+  "e821b318-928b-4eee-9bca-d00366554792": "De aansluitingsperiode moet binnen de periode van het gekozen werkjaar liggen",
+  "3754b38e-3938-4589-801a-450ba0844990": "Instellingen per werkjaar",
+  "8004af94-7b57-4ce2-aa9b-a6658684116d": "Per werkjaar kan je een prijs bepalen voor deze aansluiting, inclusief de start- en einddata.",
+  "cc48e00f-2c6b-4f4d-9bae-65a889364ea3": "Er kunnen geen wijzigingen meer aangebracht worden aan inschrijvingen in dit werkjaar.",
+  "b78d9c9e-9099-4fb6-93e1-6bf58e39165f": "De categorieën en leeftijdsgroepen van de groepen worden gedupliceerd naar het nieuwe werkjaar.",
+  "c95eb07d-15e3-45da-b2c2-7754c134ae65": "De leden moeten zich opnieuw inschrijven voor het nieuwe werkjaar.",
+  "865bfcae-44c2-49a5-a887-c70725d53d8b": "Alle functies van leden (behalve die met hoofdbeheerder rechten en nationale functies) worden beëindigd",
+  "9de0900d-9daa-48e5-ab82-496c61dfc5db": "Alle leeftijdsgroepen worden gesloten (tenzij de groep al eerder overschakelde naar dit werkjaar)",
+  "c28ace1d-50ff-4f1a-b403-bd5ab55d9dcb": "Werkjaren",
+  "671147bd-cf0e-42fc-b456-18ce7d75b867": "Alle groepen worden nu overgezet op het nieuw werkjaar. Dit kan even duren, mogelijks moet je de pagina nog even herladen om alle laatste wijzigingen correct te zien.",
+  "7dd9a44e-8a47-4b74-9d57-d20b1efb706f": "Dit werkjaar is vergrendeld. Je kan geen wijzigingen meer aanbrengen aan inschrijvingen.",
+  "410f13a0-286d-4f7a-b6f6-aef22327056b": "Instellen als huidig werkjaar",
+  "b5f857ee-6c3b-43df-866c-99e7e0954eb1": "Hoera! Tijd voor een nieuw werkjaar.",
+  "c5d21881-b70a-489e-bce9-5bb3d24b6f76": "Alle leden moeten opnieuw inschrijven voor het nieuwe werkjaar, of schrijf je zelf opnieuw in",
+  "275f674b-bf05-4d34-a1ff-105a1563fbcc": "Je kan pas 2 maand voor de start van het nieuwe werkjaar overschakelen.",
+  "57491b1b-a306-479e-9bc0-f0d4839a7f5c": "Stappenplan opstart werkjaar",
+  "1316502a-5502-49ec-96fe-93e60cb94268": "Filter op leden die een inschrijving (zowel huidig werkjaar of in een afgelopen werkjaar) heeft die aan deze voorwaarden voldoet.",
+  "e2130593-e64d-4f3a-bb16-75ba4ed7604e": "Leden worden als bestaand beschouwd als ze ingeschreven zijn voor een vorig werkjaar van gelijk welke inschrijvingsgroep.",
+  "fd52fa36-16e6-4106-807c-c387bc0acc0e": "Geen groepen beschikbaar in dit werkjaar",
+  "9685e11f-a4d0-4709-9f5e-875957ad269b": "Onbekend werkjaar",
+  "b19c1fb0-f1a7-4435-9150-01bb2bb0799c": "Dit aansluitingstype is (nog) niet beschikbaar voor dit werkjaar",
+  "022aad3d-6250-4000-9336-4ae7e8e75c23": "Alle leden met deze functie, krijgen automatisch toegangsrechten tot de leeftijdsgroep van een lokale groep waarvoor de functie werd toegevoegd - enkel voor één specifiek werkjaar.",
+  "a48e6035-5e61-4fc7-9ac4-89016e7174fe": "Mijn account",
+  "f02ad9a5-f0b4-483e-961c-491ddf7d6f6a": "Mijn account",
+  "68c40b9e-30d7-4ce5-8069-f7ca93221906": "Adres van je vereniging",
+  "ffdbd596-e9c8-4c67-bfdf-41a5199de133": "De link naar de website van jouw vereniging."
 }
